[project]
name = "KoiosDeviceServerModels"
version = "0.0.1"
authors = [{ name = "Tho Ha", email = "thodha@aiop.com" }]
description = "Models for usage with Koios Device Server"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic==2.9.2",
]
